feat: add Edge cloud projection and management API
